// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductTile stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="w-64"
>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-ui border-ui border-border shadow-ui product-card group w-full min-w-0 max-w-full cursor-pointer overflow-hidden gap-0 py-0"
    data-slot="card"
  >
    <div
      class="product-image relative"
    >
      <div
        class="relative w-full overflow-hidden"
      >
        <div
          class="relative overflow-hidden bg-secondary/20 flex flex-col aspect-square w-full aspect-square [&_img]:object-cover! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
        >
          <a
            aria-hidden="true"
            class="block w-full h-full flex-1"
            href="/RefArchGlobal/en-GB/product/25686571M?color=CHARCWL"
            tabindex="-1"
            to="/RefArchGlobal/en-GB/product/25686571M?color=CHARCWL"
          >
            <div
              class="w-full h-full object-cover transition-all duration-200 group-hover:scale-105"
            >
              <picture>
                <source
                  media="(min-width: 1280px)"
                  sizes="15vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=230&q=70&sfrm=jpg 230w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=461&q=70&sfrm=jpg 461w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 1024px)"
                  sizes="15vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=192&q=70&sfrm=jpg 192w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=384&q=70&sfrm=jpg 384w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 768px)"
                  sizes="15vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=154&q=70&sfrm=jpg 154w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=307&q=70&sfrm=jpg 307w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 640px)"
                  sizes="50vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=384&q=70&sfrm=jpg 384w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=768&q=70&sfrm=jpg 768w"
                  type="image/webp"
                />
                <source
                  sizes="50vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=320&q=70&sfrm=jpg 320w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=640&q=70&sfrm=jpg 640w"
                  type="image/webp"
                />
                <img
                  alt="Charcoal Single Pleat Wool Suit, Charcoal, medium"
                  class="object-cover"
                  fetchpriority="auto"
                  loading="lazy"
                  src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.jpg"
                />
              </picture>
            </div>
          </a>
        </div>
        <a
          aria-hidden="true"
          class="absolute inset-0 z-[1] cursor-pointer"
          href="/RefArchGlobal/en-GB/product/25686571M?pid=750518894461M"
          tabindex="-1"
          to="/RefArchGlobal/en-GB/product/25686571M?pid=750518894461M"
        />
        <div
          class="absolute top-2 right-2 flex flex-col items-end gap-2 z-20"
        >
          <div
            class="opacity-0 group-hover:opacity-100 focus-within:opacity-100 transition-opacity duration-300"
          >
            <button
              aria-label="Add to Wishlist"
              class="w-9 h-9 p-2 flex items-center justify-center rounded-ui transition-all duration-200 ease-in-out cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed relative top-auto right-auto z-20 bg-muted hover:bg-background shadow-sm border-0"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4 transition-all duration-200 ease-in-out text-muted-foreground scale-100"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="absolute inset-0 bg-black/0 group-hover:bg-black/5 transition-opacity duration-300 pointer-events-none"
        />
        <div
          class="absolute bottom-4 left-0 right-0 px-4 opacity-0 group-hover:opacity-100 group-focus-within:opacity-100 focus-within:opacity-100 transition-opacity duration-300 z-20"
        >
          <button
            aria-label="Quick Add Charcoal Single Pleat Wool Suit"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full shadow-sm cursor-pointer"
            data-size="default"
            data-slot="button"
            data-variant="outline"
          >
            Quick Add
          </button>
        </div>
      </div>
    </div>
    <div
      class="relative p-4"
    >
      <div>
        <div
          aria-label="Available colours"
          class="flex items-center gap-1 mb-2 relative z-20 flex-wrap"
          role="group"
        >
          <a
            aria-label="View Charcoal Single Pleat Wool Suit in Navy"
            class="w-4 h-4 rounded-full transition-all cursor-pointer relative shrink-0 focus-visible:ring-[3px] focus-visible:ring-ring hover:ring-[3px] hover:ring-muted-hover"
            href="/RefArchGlobal/en-GB/product/25686571M?color=NAVYWL"
            style="background-color: navy;"
            to="/RefArchGlobal/en-GB/product/25686571M?color=NAVYWL"
          >
            <img
              alt=""
              class="absolute inset-0 w-full h-full rounded-full object-cover opacity-0 transition-opacity duration-150"
              loading="lazy"
              src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw7fabf1ff/images/swatch/PG.52002RUBN4Q.NAVYWL.CP.webp?sfrm=jpg&q=70"
            />
          </a>
          <a
            aria-current="true"
            aria-label="View Charcoal Single Pleat Wool Suit in Charcoal"
            class="w-4 h-4 rounded-full transition-all cursor-pointer relative shrink-0 focus-visible:ring-[3px] focus-visible:ring-ring ring-[2px] ring-muted-hover ring-offset-[1px] ring-offset-foreground"
            href="/RefArchGlobal/en-GB/product/25686571M?color=CHARCWL"
            to="/RefArchGlobal/en-GB/product/25686571M?color=CHARCWL"
          >
            <img
              alt=""
              class="absolute inset-0 w-full h-full rounded-full object-cover opacity-0 transition-opacity duration-150"
              loading="lazy"
              src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5cb61ec2/images/swatch/PG.33698RUBN4Q.CHARCWL.CP.webp?sfrm=jpg&q=70"
            />
          </a>
        </div>
      </div>
      <p
        class="text-sm font-normal leading-normal text-muted-foreground mb-1"
      >
        Test Store
      </p>
      <h3
        class="text-lg font-semibold leading-[120%] tracking-[-0.45px] text-card-foreground mb-2"
      >
        <a
          class="hover:underline focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-1"
          href="/RefArchGlobal/en-GB/product/25686571M?pid=750518894461M"
          to="/RefArchGlobal/en-GB/product/25686571M?pid=750518894461M"
        >
          Charcoal Single Pleat Wool Suit
        </a>
      </h3>
      <p
        class="text-sm font-normal leading-normal text-muted-foreground mb-1"
        data-testid="product-tile-sku"
      >
        SKU:
         
        25686571M
      </p>
      <div
        class="mb-2"
      >
        <div
          class="flex flex-col gap-1"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              aria-label="4 out of 5 stars, 218 reviews"
              class="flex items-center gap-0.5"
              role="group"
            >
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="white"
                  stroke="var(--color-border-subtle)"
                  stroke-width="1"
                />
              </svg>
            </div>
            <button
              aria-label="(218)"
              class="cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 rounded-ui text-xs text-muted-foreground"
              type="button"
            >
              (218)
            </button>
          </div>
        </div>
      </div>
      <div>
        <div
          class="items-center gap-2 text-sm"
        >
          <span
            aria-hidden="true"
            class="[&:not(:first-child)]:mt-6 text-left text-lg font-semibold leading-[120%] tracking-[-0.45px] text-card-foreground"
          >
            £143.99 – £191.99
          </span>
          <span
            aria-atomic="true"
            aria-live="polite"
            class="sr-only"
          >
            Charcoal Single Pleat Wool Suit
             
            Price range from £143.99 to £191.99
          </span>
           
        </div>
        <div
          class="items-center gap-2 text-xs text-active-foreground mt-1"
        >
          <span
            class="line-clamp-2 text-[inherit] font-medium"
          >
            25% off.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductTile stories snapshot > NoProduct story renders and matches snapshot 1`] = `
<div
  class="w-64"
>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-ui border-ui border-border shadow-ui product-card group w-full min-w-0 max-w-full overflow-hidden gap-0 py-0"
    data-slot="card"
  >
    <div
      class="p-4 text-sm text-muted-foreground"
    >
      Select a product
    </div>
  </div>
</div>
`;

exports[`ProductTile stories snapshot > OutOfStock story renders and matches snapshot 1`] = `
<div
  class="w-64"
>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-ui border-ui border-border shadow-ui product-card group w-full min-w-0 max-w-full cursor-pointer overflow-hidden gap-0 py-0"
    data-slot="card"
  >
    <div
      class="product-image relative"
    >
      <div
        class="relative w-full overflow-hidden"
      >
        <div
          class="relative overflow-hidden bg-secondary/20 flex flex-col aspect-square w-full aspect-square [&_img]:object-cover! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
        >
          <a
            aria-hidden="true"
            class="block w-full h-full flex-1"
            href="/RefArchGlobal/en-GB/product/25686571M?color=CHARCWL"
            tabindex="-1"
            to="/RefArchGlobal/en-GB/product/25686571M?color=CHARCWL"
          >
            <div
              class="w-full h-full object-cover transition-all duration-200 group-hover:scale-105"
            >
              <picture>
                <source
                  media="(min-width: 1280px)"
                  sizes="15vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=230&q=70&sfrm=jpg 230w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=461&q=70&sfrm=jpg 461w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 1024px)"
                  sizes="15vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=192&q=70&sfrm=jpg 192w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=384&q=70&sfrm=jpg 384w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 768px)"
                  sizes="15vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=154&q=70&sfrm=jpg 154w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=307&q=70&sfrm=jpg 307w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 640px)"
                  sizes="50vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=384&q=70&sfrm=jpg 384w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=768&q=70&sfrm=jpg 768w"
                  type="image/webp"
                />
                <source
                  sizes="50vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=320&q=70&sfrm=jpg 320w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.webp?sw=640&q=70&sfrm=jpg 640w"
                  type="image/webp"
                />
                <img
                  alt="Charcoal Single Pleat Wool Suit, Charcoal, medium"
                  class="object-cover"
                  fetchpriority="auto"
                  loading="lazy"
                  src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw23283a20/images/medium/PG.33698RUBN4Q.CHARCWL.PZ.jpg"
                />
              </picture>
            </div>
          </a>
        </div>
        <a
          aria-hidden="true"
          class="absolute inset-0 z-[1] cursor-pointer"
          href="/RefArchGlobal/en-GB/product/25686571M?pid=750518894461M"
          tabindex="-1"
          to="/RefArchGlobal/en-GB/product/25686571M?pid=750518894461M"
        />
        <div
          class="absolute top-2 right-2 flex flex-col items-end gap-2 z-20"
        >
          <div
            class="opacity-0 group-hover:opacity-100 focus-within:opacity-100 transition-opacity duration-300"
          >
            <button
              aria-label="Add to Wishlist"
              class="w-9 h-9 p-2 flex items-center justify-center rounded-ui transition-all duration-200 ease-in-out cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed relative top-auto right-auto z-20 bg-muted hover:bg-background shadow-sm border-0"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4 transition-all duration-200 ease-in-out text-muted-foreground scale-100"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="absolute inset-0 bg-black/0 group-hover:bg-black/5 transition-opacity duration-300 pointer-events-none"
        />
        <div
          class="absolute bottom-4 left-0 right-0 px-4 opacity-0 group-hover:opacity-100 group-focus-within:opacity-100 focus-within:opacity-100 transition-opacity duration-300 z-20"
        >
          <button
            aria-label="Quick Add Charcoal Single Pleat Wool Suit"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full shadow-sm cursor-pointer"
            data-size="default"
            data-slot="button"
            data-variant="outline"
          >
            Quick Add
          </button>
        </div>
      </div>
    </div>
    <div
      class="relative p-4"
    >
      <div>
        <div
          aria-label="Available colours"
          class="flex items-center gap-1 mb-2 relative z-20 flex-wrap"
          role="group"
        >
          <a
            aria-label="View Charcoal Single Pleat Wool Suit in Navy"
            class="w-4 h-4 rounded-full transition-all cursor-pointer relative shrink-0 focus-visible:ring-[3px] focus-visible:ring-ring hover:ring-[3px] hover:ring-muted-hover"
            href="/RefArchGlobal/en-GB/product/25686571M?color=NAVYWL"
            style="background-color: navy;"
            to="/RefArchGlobal/en-GB/product/25686571M?color=NAVYWL"
          >
            <img
              alt=""
              class="absolute inset-0 w-full h-full rounded-full object-cover opacity-0 transition-opacity duration-150"
              loading="lazy"
              src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw7fabf1ff/images/swatch/PG.52002RUBN4Q.NAVYWL.CP.webp?sfrm=jpg&q=70"
            />
          </a>
          <a
            aria-current="true"
            aria-label="View Charcoal Single Pleat Wool Suit in Charcoal"
            class="w-4 h-4 rounded-full transition-all cursor-pointer relative shrink-0 focus-visible:ring-[3px] focus-visible:ring-ring ring-[2px] ring-muted-hover ring-offset-[1px] ring-offset-foreground"
            href="/RefArchGlobal/en-GB/product/25686571M?color=CHARCWL"
            to="/RefArchGlobal/en-GB/product/25686571M?color=CHARCWL"
          >
            <img
              alt=""
              class="absolute inset-0 w-full h-full rounded-full object-cover opacity-0 transition-opacity duration-150"
              loading="lazy"
              src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5cb61ec2/images/swatch/PG.33698RUBN4Q.CHARCWL.CP.webp?sfrm=jpg&q=70"
            />
          </a>
        </div>
      </div>
      <p
        class="text-sm font-normal leading-normal text-muted-foreground mb-1"
      >
        Test Store
      </p>
      <h3
        class="text-lg font-semibold leading-[120%] tracking-[-0.45px] text-card-foreground mb-2"
      >
        <a
          class="hover:underline focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-1"
          href="/RefArchGlobal/en-GB/product/25686571M?pid=750518894461M"
          to="/RefArchGlobal/en-GB/product/25686571M?pid=750518894461M"
        >
          Charcoal Single Pleat Wool Suit
        </a>
      </h3>
      <p
        class="text-sm font-normal leading-normal text-muted-foreground mb-1"
        data-testid="product-tile-sku"
      >
        SKU:
         
        25686571M
      </p>
      <div
        class="mb-2"
      >
        <div
          class="flex flex-col gap-1"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              aria-label="4 out of 5 stars, 218 reviews"
              class="flex items-center gap-0.5"
              role="group"
            >
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="white"
                  stroke="var(--color-border-subtle)"
                  stroke-width="1"
                />
              </svg>
            </div>
            <button
              aria-label="(218)"
              class="cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 rounded-ui text-xs text-muted-foreground"
              type="button"
            >
              (218)
            </button>
          </div>
        </div>
      </div>
      <div>
        <div
          class="items-center gap-2 text-sm"
        >
          <span
            aria-hidden="true"
            class="[&:not(:first-child)]:mt-6 text-left text-lg font-semibold leading-[120%] tracking-[-0.45px] text-card-foreground"
          >
            £143.99 – £191.99
          </span>
          <span
            aria-atomic="true"
            aria-live="polite"
            class="sr-only"
          >
            Charcoal Single Pleat Wool Suit
             
            Price range from £143.99 to £191.99
          </span>
           
        </div>
        <div
          class="items-center gap-2 text-xs text-active-foreground mt-1"
        >
          <span
            class="line-clamp-2 text-[inherit] font-medium"
          >
            25% off.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductTile stories snapshot > Playground story renders and matches snapshot 1`] = `
<div
  class="w-64"
>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-ui border-ui border-border shadow-ui product-card group w-full min-w-0 max-w-full cursor-pointer overflow-hidden gap-0 py-0"
    data-slot="card"
  >
    <div
      class="product-image relative"
    >
      <div
        class="relative w-full overflow-hidden"
      >
        <div
          class="relative overflow-hidden bg-secondary/20 flex flex-col aspect-square w-full aspect-square [&_img]:object-cover! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
        >
          <a
            aria-hidden="true"
            class="block w-full h-full flex-1"
            href="/RefArchGlobal/en-GB/product/25518101M?color=JJ908XX"
            tabindex="-1"
            to="/RefArchGlobal/en-GB/product/25518101M?color=JJ908XX"
          >
            <div
              class="w-full h-full object-cover transition-all duration-200 group-hover:scale-105"
            >
              <picture>
                <source
                  media="(min-width: 1280px)"
                  sizes="15vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwc9ce7da9/images/medium/PG.10217069.JJ908XX.PZ.webp?sw=230&q=70&sfrm=jpg 230w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwc9ce7da9/images/medium/PG.10217069.JJ908XX.PZ.webp?sw=461&q=70&sfrm=jpg 461w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 1024px)"
                  sizes="15vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwc9ce7da9/images/medium/PG.10217069.JJ908XX.PZ.webp?sw=192&q=70&sfrm=jpg 192w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwc9ce7da9/images/medium/PG.10217069.JJ908XX.PZ.webp?sw=384&q=70&sfrm=jpg 384w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 768px)"
                  sizes="15vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwc9ce7da9/images/medium/PG.10217069.JJ908XX.PZ.webp?sw=154&q=70&sfrm=jpg 154w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwc9ce7da9/images/medium/PG.10217069.JJ908XX.PZ.webp?sw=307&q=70&sfrm=jpg 307w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 640px)"
                  sizes="50vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwc9ce7da9/images/medium/PG.10217069.JJ908XX.PZ.webp?sw=384&q=70&sfrm=jpg 384w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwc9ce7da9/images/medium/PG.10217069.JJ908XX.PZ.webp?sw=768&q=70&sfrm=jpg 768w"
                  type="image/webp"
                />
                <source
                  sizes="50vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwc9ce7da9/images/medium/PG.10217069.JJ908XX.PZ.webp?sw=320&q=70&sfrm=jpg 320w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwc9ce7da9/images/medium/PG.10217069.JJ908XX.PZ.webp?sw=640&q=70&sfrm=jpg 640w"
                  type="image/webp"
                />
                <img
                  alt="Long Sleeve Embellished Boat Neck Top, Grey Heather, medium"
                  class="object-cover"
                  fetchpriority="auto"
                  loading="lazy"
                  src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwc9ce7da9/images/medium/PG.10217069.JJ908XX.PZ.jpg"
                />
              </picture>
            </div>
          </a>
        </div>
        <a
          aria-hidden="true"
          class="absolute inset-0 z-[1] cursor-pointer"
          href="/RefArchGlobal/en-GB/product/25518101M?pid=701642823919M"
          tabindex="-1"
          to="/RefArchGlobal/en-GB/product/25518101M?pid=701642823919M"
        />
        <div
          class="absolute top-2 left-2 flex flex-col items-start gap-1 z-20"
        >
          <span
            class="px-2 py-1 text-xs font-semibold uppercase inline-block bg-foreground text-background leading-none rounded-ui"
            data-slot="badge"
          >
            New
          </span>
        </div>
        <div
          class="absolute top-2 right-2 flex flex-col items-end gap-2 z-20"
        >
          <div
            aria-label="Pickup Available"
            class="group/pickup relative"
            data-testid="pickup-available-indicator"
            role="img"
          >
            <div
              class="w-9 h-9 p-2 bg-muted text-muted-foreground flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </div>
            <div
              class="absolute right-0 top-full mt-1 z-50 opacity-0 group-hover/pickup:opacity-100 transition-opacity duration-200 pointer-events-none"
            >
              <div
                class="bg-foreground text-background text-xs font-medium px-2 py-1 whitespace-nowrap shadow-lg"
              >
                Pickup Available
              </div>
            </div>
          </div>
          <div
            class="opacity-0 group-hover:opacity-100 focus-within:opacity-100 transition-opacity duration-300"
          >
            <button
              aria-label="Add to Wishlist"
              class="w-9 h-9 p-2 flex items-center justify-center rounded-ui transition-all duration-200 ease-in-out cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed relative top-auto right-auto z-20 bg-muted hover:bg-background shadow-sm border-0"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4 transition-all duration-200 ease-in-out text-muted-foreground scale-100"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="absolute inset-0 bg-black/0 group-hover:bg-black/5 transition-opacity duration-300 pointer-events-none"
        />
        <div
          class="absolute bottom-4 left-0 right-0 px-4 opacity-0 group-hover:opacity-100 group-focus-within:opacity-100 focus-within:opacity-100 transition-opacity duration-300 z-20"
        >
          <button
            aria-label="Quick Add Long Sleeve Embellished Boat Neck Top"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full shadow-sm cursor-pointer"
            data-size="default"
            data-slot="button"
            data-variant="outline"
          >
            Quick Add
          </button>
        </div>
      </div>
    </div>
    <div
      class="relative p-4"
    >
      <div>
        <div
          aria-label="Available colours"
          class="flex items-center gap-1 mb-2 relative z-20 flex-wrap"
          role="group"
        >
          <a
            aria-label="View Long Sleeve Embellished Boat Neck Top in Begonia Pink"
            class="w-4 h-4 rounded-full transition-all cursor-pointer relative shrink-0 focus-visible:ring-[3px] focus-visible:ring-ring hover:ring-[3px] hover:ring-muted-hover"
            href="/RefArchGlobal/en-GB/product/25518101M?color=JJ5QZXX"
            to="/RefArchGlobal/en-GB/product/25518101M?color=JJ5QZXX"
          >
            <img
              alt=""
              class="absolute inset-0 w-full h-full rounded-full object-cover opacity-0 transition-opacity duration-150"
              loading="lazy"
              src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2b23d065/images/swatch/PG.10217069.JJ5QZXX.CP.webp?sfrm=jpg&q=70"
            />
          </a>
          <a
            aria-current="true"
            aria-label="View Long Sleeve Embellished Boat Neck Top in Grey Heather"
            class="w-4 h-4 rounded-full transition-all cursor-pointer relative shrink-0 focus-visible:ring-[3px] focus-visible:ring-ring ring-[2px] ring-muted-hover ring-offset-[1px] ring-offset-foreground"
            href="/RefArchGlobal/en-GB/product/25518101M?color=JJ908XX"
            to="/RefArchGlobal/en-GB/product/25518101M?color=JJ908XX"
          >
            <img
              alt=""
              class="absolute inset-0 w-full h-full rounded-full object-cover opacity-0 transition-opacity duration-150"
              loading="lazy"
              src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw747c5f3e/images/swatch/PG.10217069.JJ908XX.CP.webp?sfrm=jpg&q=70"
            />
          </a>
        </div>
      </div>
      <p
        class="text-sm font-normal leading-normal text-muted-foreground mb-1"
      >
        Test Store
      </p>
      <p
        class="text-sm font-normal leading-normal text-muted-foreground mb-1"
      >
        Men
      </p>
      <h3
        class="text-lg font-semibold leading-[120%] tracking-[-0.45px] text-card-foreground mb-2"
      >
        <a
          class="hover:underline focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-1"
          href="/RefArchGlobal/en-GB/product/25518101M?pid=701642823919M"
          to="/RefArchGlobal/en-GB/product/25518101M?pid=701642823919M"
        >
          Long Sleeve Embellished Boat Neck Top
        </a>
      </h3>
      <p
        class="text-sm font-normal leading-normal text-muted-foreground mb-1"
        data-testid="product-tile-sku"
      >
        SKU:
         
        25518101M
      </p>
      <div
        class="mb-2"
      >
        <div
          class="flex flex-col gap-1"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              aria-label="4 out of 5 stars, 218 reviews"
              class="flex items-center gap-0.5"
              role="group"
            >
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="white"
                  stroke="var(--color-border-subtle)"
                  stroke-width="1"
                />
              </svg>
            </div>
            <button
              aria-label="(218)"
              class="cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 rounded-ui text-xs text-muted-foreground"
              type="button"
            >
              (218)
            </button>
          </div>
        </div>
      </div>
      <div>
        <div
          class="items-center gap-2 text-sm"
        >
          <span
            aria-hidden="true"
            class="[&:not(:first-child)]:mt-6 text-left text-lg font-semibold leading-[120%] tracking-[-0.45px] text-card-foreground"
          >
            £18.55
          </span>
          <span
            aria-atomic="true"
            aria-live="polite"
            class="sr-only"
          >
            Long Sleeve Embellished Boat Neck Top
             
            Current price: £18.55
          </span>
           
          <span
            aria-hidden="true"
            class="font-medium text-left text-muted-foreground text-sm leading-none line-through"
          >
            £31.36
          </span>
          <span
            aria-atomic="true"
            aria-live="polite"
            class="sr-only"
          >
            Long Sleeve Embellished Boat Neck Top
             
            List price from £31.36
          </span>
        </div>
        <div
          class="items-center gap-2 text-xs text-active-foreground mt-1"
        >
          <span
            class="line-clamp-2 text-[inherit] font-medium"
          >
            Buy one Long Center Seam Skirt and get 2 tops
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductTile stories snapshot > ProductSetWithPriceRange story renders and matches snapshot 1`] = `
<div
  class="w-64"
>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-ui border-ui border-border shadow-ui product-card group w-full min-w-0 max-w-full cursor-pointer overflow-hidden gap-0 py-0"
    data-slot="card"
  >
    <div
      class="product-image relative"
    >
      <div
        class="relative w-full overflow-hidden"
      >
        <div
          class="relative overflow-hidden bg-secondary/20 flex flex-col aspect-square w-full aspect-square [&_img]:object-cover! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
        >
          <a
            aria-hidden="true"
            class="block w-full h-full flex-1"
            href="/RefArchGlobal/en-GB/product/winter-lookM"
            tabindex="-1"
            to="/RefArchGlobal/en-GB/product/winter-lookM"
          >
            <div
              class="w-full h-full object-cover transition-all duration-200 group-hover:scale-105"
            >
              <picture>
                <source
                  media="(min-width: 1280px)"
                  sizes="15vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe1c4cd52/images/large/PG.10205921.JJ5FUXX.PZ.webp?sw=230&q=70&sfrm=jpg 230w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe1c4cd52/images/large/PG.10205921.JJ5FUXX.PZ.webp?sw=461&q=70&sfrm=jpg 461w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 1024px)"
                  sizes="15vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe1c4cd52/images/large/PG.10205921.JJ5FUXX.PZ.webp?sw=192&q=70&sfrm=jpg 192w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe1c4cd52/images/large/PG.10205921.JJ5FUXX.PZ.webp?sw=384&q=70&sfrm=jpg 384w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 768px)"
                  sizes="15vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe1c4cd52/images/large/PG.10205921.JJ5FUXX.PZ.webp?sw=154&q=70&sfrm=jpg 154w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe1c4cd52/images/large/PG.10205921.JJ5FUXX.PZ.webp?sw=307&q=70&sfrm=jpg 307w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 640px)"
                  sizes="50vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe1c4cd52/images/large/PG.10205921.JJ5FUXX.PZ.webp?sw=384&q=70&sfrm=jpg 384w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe1c4cd52/images/large/PG.10205921.JJ5FUXX.PZ.webp?sw=768&q=70&sfrm=jpg 768w"
                  type="image/webp"
                />
                <source
                  sizes="50vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe1c4cd52/images/large/PG.10205921.JJ5FUXX.PZ.webp?sw=320&q=70&sfrm=jpg 320w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe1c4cd52/images/large/PG.10205921.JJ5FUXX.PZ.webp?sw=640&q=70&sfrm=jpg 640w"
                  type="image/webp"
                />
                <img
                  alt="Winter Look, , large"
                  class="object-cover"
                  fetchpriority="auto"
                  loading="lazy"
                  src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe1c4cd52/images/large/PG.10205921.JJ5FUXX.PZ.jpg"
                />
              </picture>
            </div>
          </a>
        </div>
        <a
          aria-hidden="true"
          class="absolute inset-0 z-[1] cursor-pointer"
          href="/RefArchGlobal/en-GB/product/winter-lookM"
          tabindex="-1"
          to="/RefArchGlobal/en-GB/product/winter-lookM"
        />
        <div
          class="absolute top-2 right-2 flex flex-col items-end gap-2 z-20"
        >
          <div
            class="opacity-0 group-hover:opacity-100 focus-within:opacity-100 transition-opacity duration-300"
          >
            <button
              aria-label="Add to Wishlist"
              class="w-9 h-9 p-2 flex items-center justify-center rounded-ui transition-all duration-200 ease-in-out cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed relative top-auto right-auto z-20 bg-muted hover:bg-background shadow-sm border-0"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4 transition-all duration-200 ease-in-out text-muted-foreground scale-100"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="absolute inset-0 bg-black/0 group-hover:bg-black/5 transition-opacity duration-300 pointer-events-none"
        />
        <div
          class="absolute bottom-4 left-0 right-0 px-4 opacity-0 group-hover:opacity-100 group-focus-within:opacity-100 focus-within:opacity-100 transition-opacity duration-300 z-20"
        >
          <button
            aria-label="Quick Add Winter Look"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full shadow-sm cursor-pointer"
            data-size="default"
            data-slot="button"
            data-variant="outline"
          >
            Quick Add
          </button>
        </div>
      </div>
    </div>
    <div
      class="relative p-4"
    >
      <p
        class="text-sm font-normal leading-normal text-muted-foreground mb-1"
      >
        Test Store
      </p>
      <h3
        class="text-lg font-semibold leading-[120%] tracking-[-0.45px] text-card-foreground mb-2"
      >
        <a
          class="hover:underline focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-1"
          href="/RefArchGlobal/en-GB/product/winter-lookM"
          to="/RefArchGlobal/en-GB/product/winter-lookM"
        >
          Winter Look
        </a>
      </h3>
      <p
        class="text-sm font-normal leading-normal text-muted-foreground mb-1"
        data-testid="product-tile-sku"
      >
        SKU:
         
        winter-lookM
      </p>
      <div
        class="mb-2"
      >
        <div
          class="flex flex-col gap-1"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              aria-label="4 out of 5 stars, 218 reviews"
              class="flex items-center gap-0.5"
              role="group"
            >
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="var(--color-rating)"
                  stroke="var(--color-rating)"
                  stroke-width="1"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="shrink-0 w-3 h-3 text-foreground"
                viewBox="0 0 20 20"
              >
                <path
                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                  fill="white"
                  stroke="var(--color-border-subtle)"
                  stroke-width="1"
                />
              </svg>
            </div>
            <button
              aria-label="(218)"
              class="cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 rounded-ui text-xs text-muted-foreground"
              type="button"
            >
              (218)
            </button>
          </div>
        </div>
      </div>
      <div>
        <div
          class="items-center gap-2 text-sm"
        >
          <span
            aria-hidden="true"
            class="[&:not(:first-child)]:mt-6 text-left text-lg font-semibold leading-[120%] tracking-[-0.45px] text-card-foreground"
          >
            £40.16 – £71.03
          </span>
          <span
            aria-atomic="true"
            aria-live="polite"
            class="sr-only"
          >
            Winter Look
             
            Price range from £40.16 to £71.03
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
